<resources>
    <string name="app_name">Slam Book</string>
    <string name="hello">Hello!</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="age">Age</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="enter_age">Enter Age</string>
    <string name="birthday">When is your birthday?</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="course">What is your Course?</string>
    <string name="enter_course">Enter Course</string>
    <string name="mobile_number">What is your Mobile Number?</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="color">What is your Favorite Color?</string>
    <string name="enter_favorite_color">Enter Favorite Color</string>
    <string name="ultimate_dream">What is your Ultimate Dream</string>
    <string name="enter_ultimate_dream">Enter Ultimate Dream</string>
    <string name="secret_crush">Who is your Secret Crush?</string>
    <string name="enter_crush">Enter Crush</string>
    <string name="message">What is your Message for Me?</string>
    <string name="enter_message">Enter Message</string>
    <string name="done">Done</string>
    <string name="thank_you">Thank You for Answering!</string>
</resources>
